# Kurata-2005-Bifurcation-analysis

./: README.md
FIX_Ito_0.13Ikr_ver1.0/: Makefile.am  Makefile.in  README  config.h.in  configure  configure.ac
FIX_Ito_0.13Ikr_ver1.0/mkdata/: 0d1-11.in  0d1-21.in  0d1-21.init  0d1-22.in  0d1-22.init  0d2-11.in  0d2-11.init  1i1-12.in  1i1-12.init  1i1-21.in  1i1-21.init  2d2-10.init  2d2-11.init  in  in.0d1-11  in.0d1-21
FIX_Ito_0.13Ikr_ver1.0/src/: dgesv.c  input_para.c  jacobi.c  krt.c  krt.c.org  mem.c  pp_system.c  syspara.h  syspara.h.org  system.c  val_constants.c  val_constants.c.20140916
FIX_for_1.0IKs/: Makefile.in  config.h.in~  configure
FIX_for_1.0IKs/mkdata_sample/: in
FIX_for_1.0IKs/src/: currents.c  krt.c  syspara.h  system.c.bak  val_constants.c
FIX_for_1.0IKs/src/sh/: DF.m  trans.sh  trans2.sh
MATLAB/MKSYS_3.0/: Diffeq.m_KRT  system.ps
MATLAB/MKSYS_3.0/mksys/: 0O.@  @.@  DF.m  Diffeq.m  Diffeq.m_pre  MKSYS.m  MKSYS_noTeX.m  bf.in  d2fdxdp_eq.m  d2fdxdx_eq.m  (+5 more)
ODE/: ito100-kvm15-0.ode  ito100-kvm15-1.ode  ito50-kvm15-0.ode  ito50-kvm15-1.ode  ito60-kvm15-0.ode  ito60-kvm15-1.ode  ito70-kvm15-0.ode  ito70-kvm15-1.ode  ito80-kvm15-0.ode  ito80-kvm15-1.ode  ito90-kvm15-0.ode  ito90-kvm15-1.ode
debug_FIX_for_1.0IKs/: Makefile.am  Makefile.in  config.h.in  configure.ac
debug_FIX_for_1.0IKs/mkdata_sample/: cut.sh  in  in.0D1-11
debug_FIX_for_1.0IKs/src/: exptable.c  input_para.c  krt.c  system.c  val_constants.c
make_system_scripts/: mkfix.txt  test.txt  trans.sh  trans_pre.sh
make_system_scripts/org/: test.txt.org  trans.sh.org
(+163 files in other folders)
